# Eligify---AI-for-Bharat

./: .coverage  30_MINUTE_IMPROVEMENTS.md  API_INTEGRATION_REFERENCE.md  BACKEND_FRONTEND_INTEGRATION_STATUS.md  BACKEND_VERIFIED_WORKING.md  COMPONENT_ARCHITECTURE.md  CURRENT_STATUS.md  DEMO_FLOWS.md  DEMO_USER_FLOW.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  FILE_TREE.txt  FRONTEND_EXPORT_MANIFEST.md  FRONTEND_SETUP_GUIDE.md  GROQ_QA_INTEGRATION.md  HACKATHON_ABSTRACT.md  INTEGRATION_CHECKLIST.md  INTELLIGENCE_FEATURES_INTEGRATION_GUIDE.md  INTERNSHIPS_DISPLAY_GUIDE.md  KIRO_PROMPTS_FOR_TEAMMATE.md  LANDING_PAGE_LOGO_REFINEMENT.md  LANDING_PAGE_LOGO_UPDATE.md  LOGIN_TIMEOUT_FIX.md  PROJECT_GENERATION_FIX.md  QA_MODULE_TEST_RESULTS.md  QUICK_DEPLOYMENT_GUIDE.md  QUICK_START_GUIDE.md  README.md  REMAINING_TASKS_AND_RECOMMENDATIONS.md  RESUME_UPLOAD_FIX.md  SERVER_STATUS.md  SKILLS_EXTRACTION_GROQ_INTEGRATION.md  START_HERE_TEAMMATE.md  START_PROJECT.md  SYSTEM_STATUS.md  TASK_10_COMPLETION_SUMMARY.md  TASK_11_COMPLETION_SUMMARY.md  TASK_9_COMPLETION_SUMMARY.md  TESTING_GUIDE.md  (+24 more)
backend/: .env.example  .env.production.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  RUN_ME_FIRST.bat  clear_mock_data.py  generated_project.json  pyproject.toml  pytest.ini  quick_health_check.py  quick_start.bat  quick_start.sh  requirements.txt  reset_password.py  serverless.yml  test_ai_features.py  test_assessment.py  test_assessment_endpoint.py  test_project_generation.py  test_projects_load.py  test_skills_extraction.py
backend/data/: .gitignore  (+1 more)
(+160 files in other folders)
